# retail_network_project

./: .env.sample  README.md  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
network/: admin.py  models.py  serializers.py  urls.py  views.py
network/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py
